k8s/arcx-public-api-app.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: arcx-public-api-app
  annotations:
    app.gitlab.com/app: ${CI_PROJECT_PATH_SLUG}
    app.gitlab.com/env: ${CI_ENVIRONMENT_SLUG}
spec:
  replicas: 1
  selector:
    matchLabels:
      app: arcx-public-api-app

  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
    type: RollingUpdate

  template:
    metadata:
      labels:
        app: arcx-public-api-app
      annotations:
        app.gitlab.com/app: ${CI_PROJECT_PATH_SLUG}
        app.gitlab.com/env: ${CI_ENVIRONMENT_SLUG}

    spec:
      securityContext:
        runAsUser: 555
        runAsGroup: 555
        fsGroup: 555
      containers:
      - name: app
        image: $CI_REGISTRY_IMAGE/public-api-app:$CI_COMMIT_SHORT_SHA
        imagePullPolicy: Always
        livenessProbe:
         tcpSocket:
            port: 7200
         initialDelaySeconds: 60
         periodSeconds: 30
        readinessProbe:
         tcpSocket:
            port: 7200
         initialDelaySeconds: 60
         periodSeconds: 30
        ports:
        - containerPort: 7200
      imagePullSecrets:
      - name: glcr-auth
---

apiVersion: v1
kind: Service
metadata:
  name: arcx-public-api-app-service
  annotations:
    app.gitlab.com/app: ${CI_PROJECT_PATH_SLUG}
    app.gitlab.com/env: ${CI_ENVIRONMENT_SLUG}
spec:
  ports:
  - port: 7200
  selector:
    app: arcx-public-api-app
