k8s/arcx-public-api-web.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: arcx-public-api-web
  annotations:
    app.gitlab.com/app: ${CI_PROJECT_PATH_SLUG}
    app.gitlab.com/env: ${CI_ENVIRONMENT_SLUG}
spec:
  replicas: 1
  selector:
    matchLabels:
      app: arcx-public-api-web

  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
    type: RollingUpdate

  template:
    metadata:
      labels:
        app: arcx-public-api-web
      annotations:
        app.gitlab.com/app: ${CI_PROJECT_PATH_SLUG}
        app.gitlab.com/env: ${CI_ENVIRONMENT_SLUG}

    spec:
      containers:
      - name: web
        image: $CI_REGISTRY_IMAGE/public-api-web:$CI_COMMIT_SHORT_SHA
        imagePullPolicy: Always
        ports:
        - containerPort: 80
      imagePullSecrets:
      - name: glcr-auth

---

apiVersion: v1
kind: Service
metadata:
  name: arcx-public-api-web-service
  annotations:
    app.gitlab.com/app: ${CI_PROJECT_PATH_SLUG}
    app.gitlab.com/env: ${CI_ENVIRONMENT_SLUG}
spec:
  ports:
  - port: 80
  selector:
    app: arcx-public-api-web

---

apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: arcx-public-api-web-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    app.gitlab.com/app: ${CI_PROJECT_PATH_SLUG}
    app.gitlab.com/env: ${CI_ENVIRONMENT_SLUG}
    nginx.ingress.kubernetes.io/auth-tls-secret: arc-x-public-api-238-dev/arc-x-cert
spec:
  rules:
  - host: arc-x-public-api.devsecops-dev.aws.epa.gov
    http:
      paths:
      - backend:
          serviceName: arcx-public-api-web-service
          servicePort: 80
  tls:
  - hosts:
    - arc-x-public-api.devsecops-dev.aws.epa.gov
    secretName: arc-x-cert
